# atpl25-pub

./: exercise3.md
HQPlayground/: .ghci  hqp.cabal  tags
HQPlayground/exe/: NoCloning.hs  ProgramInversion.hs  YesTeleportation.hs
HQPlayground/solutions/: ProgramInversion.hs
HQPlayground/src/: MatrixSemantics.hs
HQPlayground/src/HQP/PrettyPrint/: PrettyOp.hs
HQPlayground/src/HQP/QOp/: HelperFunctions.hs  MatrixSemantics.hs  Simplify.hs  Syntax.hs  TensorSemantics.hs
HQPlayground/src/Programs/: QFT.hs
code/: hqp.cabal
code/exe/: NoCloning.hs  YesTeleportation.hs
code/src/HQP/: PrettyPrint.hs  QOp.hs
code/src/HQP/PrettyPrint/: PrettyOp.hs
code/src/HQP/QOp/: HelperFunctions.hs  MatrixSemantics.hs  Operator.hs  Simplify.hs  Syntax.hs
code/src/Programs/: QFT.hs
